Tests for PrometheusMetric.java